--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Bae-Suzy-Bot",
+    "name": "Lauren Summer",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
     "keywords": [
       "telegram",
@@ -14,8 +14,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/kalanakt/Bae-Suzy-Bot-TG",
-    "repository": "https://github.com/kalanakt/Bae-Suzy-Bot-TG",
+    "website": "https://github.com/mallumovieleech/Bae-Suzy-Bot-TG",
+    "repository": "https://github.com/mallumovieleech/Bae-Suzy-Bot-TG",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
